--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 .App {
+  background-color: #F8f8f8;
+  position: relative;
+  height: 100%;
+}
+
+.header {
+  width: 100%;
+  background-color: #fff;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer {
+  width: 100%;
+  background-color: #fff;
+  text-align: center;
+  padding: 150px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.youtube {
+  max-width: 100%; 
+  height: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.topimage {
+  max-width: 100%; 
+  height: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.left {
+  background-color: #0068FF;
+  height: 100%;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.td {
+  font-size: 40pt;
+  font-weight: bolder;
+  color: #666;
+}
+
+.tdc {
+  font-size: 40pt;
+  font-weight: bold;
+  color: #0068FF;
+}
+
+.wt {
+  font-size: 40pt;
+  color: #bbb;
+}
+
+.right {
+  font-size: 12pt;
 }
